# MatrixMultiplyOpenCL

./: CMakeLists.txt  README.md  func.h  getTransitiveClosure.c  initializeOpenCL.c  kernel.cl  main.c  multiplyMatrix.c
TestFramework/: CuTest.c
Tests/: AllTests.c  testGetTransitiveClosure.c  testMatrixMultiply.c
src/: getTransitiveClosure.c  initializeOpenCL.c  loadCLKernel.c  main.c  multiplyMatrix.c
